--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--<link rel="stylesheet" href="./css/main.css">-->
+  <link rel="stylesheet" href="./css/main.css">
   <title>Eleventy Serverless</title>
   </head>
   <body>
@@ -24,8 +24,8 @@
   </main>
   <script>
     async function initialize() {
-        const movies = await fetch('../functions/movies.js')
-        .then((response) => response.json());
+        const movies = await fetch('/.netlify/functions/movies')
+        .then((response) => response.json(),);
         const container = document.querySelector('.movies');
         const template = document.querySelector('#movie-template');
         
@@ -44,7 +44,6 @@
     initialize();
   </script>
   <!--<script src="../functions/movies.js" type="module"></script>-->
-  <!--<script src="./dist/main.js"></script>-->
   <!--<script type="module" src="./src/index.js"></script>-->
 </body>
 </html>
